added signup and marquee

--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="shortcut icon" href="./src/assets/Green_Minimalist_Home_Logo___2_-removebg-preview.png" type="image/x-icon">
+    <title>Roommate Hunt</title>
   </head>
   <body>
     <div id="root"></div>
