signup and login authentication

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./src/assets/Green_Minimalist_Home_Logo___2_-removebg-preview.png" type="image/x-icon">
     <title>Roommate Hunt</title>
   </head>
